--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version" : 2,
     "name" : "random",
-    "builds":[{"src":"app.js", "use":"@vercel/node"}],
+    "builds":[{"src":"/app.js", "use":"@vercel/node"}],
     "routes":[{"src":"/(.*)", "dest":"/app.js"}]
 }
