--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A sample project for testing.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js", 
+    "dev": "nodemon app.js"
+    // "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nishchay",
   "license": "ISC",
